March 18th, 2012: Alex Burger <alex_b@users.sourceforge.net>
- Fixed bug with unknown_trap_exec_format which resulted in duplicate text
  when a custom format is used.  (Bug #37)

Oct 22nd, 2012: Alex Burger <alex_b@users.sourceforge.net>
- Fixed bug with fix that was applied for bug 3567748 (syslog % escaping). 
- Changed version to snmptt1.4beta2

Oct 21th, 2012: Alex Burger <alex_b@users.sourceforge.net>
- Release of snmptt1.4beta1

Oct 21th, 2012: Alex Burger <alex_b@users.sourceforge.net>
- Fixed bug with snmptt hanging if the log message sent to syslog contained a 
  % symbol.  All %'s are now escaped before sending to syslog (3567748). 
  Thanks to Edward Greenspan.
- Fixed bug with LOGONLY severity (3567744).  EXEC was being executed even if
  the trap had a severity of LOGONLY.  
- Fixed bug with not being able to write to the debug log file when running
  snmptt as non-root if the debug file didn't already exist with the correct
  permissions at startup.  The ownership of snmptt.debug is now set to
  daemon_uid before switching to the new uid.  Patch 3423525.  Thanks to
  Matvey Marinin.

Oct 30th, 2011: Alex Burger <alex_b@users.sourceforge.net>
- Installation documentation updates (bug 3425999). Thanks to Brian Excarnate.
- Fixed bug with MATCH where number ranges were not working (3397982). Thanks to Maex.
- Fixed bug with syslog logging.  Function was not being called properly (3166749).

Oct 9th, 2010: Alex Burger <alex_b@users.sourceforge.net>
- Fixed bug where if the spool directory is not defined, files may be deleted
  from the wrong folder (3020696).

May 5th, 2010: Alex Burger <alex_b@users.sourceforge.net>
- Fixed possible bug with MySQL.  Put CONNECT string on one line.
- Fixed bug where the hostname is not detected properly when snmptrapd
  is configured to not use DNS.
- Fixed bug with syslog (2980512).  Log entries were supposed to be logged with
  snmptt[pid] but instad of the pid it was actually the effective user ID.