@@ -3,14 +3,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta name="generator" content=
-"HTML Tidy for Linux (vers 11 February 2007), see www.w3.org" />
+"HTML Tidy for Linux/x86 (vers 14 June 2007), see www.w3.org" />
 <meta content="text/html; charset=us-ascii" http-equiv=
 "Content-Type" />
 <meta content="Alex Burger" name="Author" />
 <meta content="Mozilla/4.78 [en] (Windows NT 5.0; U) [Netscape]"
 name="GENERATOR" />
 <link rel="StyleSheet" type="text/css" href="layout1.css" />
-<title>SNMP Trap Translator v1.4beta1</title>
+<title>SNMP Trap Translator v1.4</title>
 </head>
 <body>
 <h1>SNMPTT FAQ / Troubleshooting</h1>
