@@ -1,7 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta content=
-"HTML Tidy for Linux (vers 11 February 2007), see www.w3.org" name=
+"HTML Tidy for Linux/x86 (vers 14 June 2007), see www.w3.org" name=
 "generator" />
 <meta http-equiv="Content-Type" content=
 "text/html; charset=us-ascii" />
@@ -12,9 +12,9 @@
 <title>SNMP Trap Translator</title>
 </head>
 <body>
-<h1>SNMP Trap Translator v1.4beta2</h1>
+<h1>SNMP Trap Translator v1.4</h1>
 <b>(<a href="http://www.snmptt.org">SNMPTT</a>)</b><br />
-This file was last updated on: Octboer 22nd, 2012
+This file was last updated on: November 6th, 2013
 <p><a href="#License">License</a></p>
 <p><a href="#What-is-it">SNMPTT</a></p>
 <blockquote><a href="#What-is-it">What is it?</a><br />
@@ -90,7 +90,7 @@ forwarding</a><br />
 <b>&nbsp;&nbsp;</b> <a href="#Hobbit">Hobbit</a></blockquote>
 <br />
 <h2><a id="License" name="License"></a>License</h2>
-<p>Copyright 2002-2012 Alex Burger<br />
+<p>Copyright 2002-2013 Alex Burger<br />
 alex_b@users.sourceforge.net<br />
 4/3/2002</p>
 <p>This program is free software; you can redistribute it and/or
@@ -303,7 +303,7 @@ required, using the Perl module is recommended. &nbsp;It is also
 required if you want to use the snmptthandler-embedded trap handler
 with snmptrapd.</blockquote>
 <h2><a id="Whats-New" name="Whats-New"></a>What's New</h2>
-<h3><b>v1.4beta2</b> <b>- October 22nd, 2012</b></h3>
+<h3><b>v1.4</b> <b>- November 6th, 2013</b></h3>
 <ul>
 <li>Added <span style="font-weight: bold;">snmptt.ini</span> option
 <span style="font-weight: bold;">net_snmp_perl_cache_enable</span>
@@ -941,7 +941,7 @@ configuration files to load</li>
 <li>Initial release</li>
 </ul>
 <h2><a id="Upgrading" name="Upgrading"></a>Upgrading<br /></h2>
-<h3><b>v1.3 to v1.4beta2</b></h3>
+<h3><b>v1.3 to v1.4</b></h3>
 <p>To upgrade from v1.3 to v1.4, you should:</p>
 <ol>
 <li>Replace <b>snmptt</b> and <b>snmptthandler-embedded</b> with
