@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta name="generator" content=
-"HTML Tidy for Linux (vers 11 February 2007), see www.w3.org" />
+"HTML Tidy for Linux/x86 (vers 14 June 2007), see www.w3.org" />
 <meta content="text/html; charset=us-ascii" http-equiv=
 "Content-Type" />
 <meta content="Alex Burger" name="Author" />
@@ -13,12 +13,12 @@ name="GENERATOR" />
 <title>SNMP Trap Translator</title>
 </head>
 <body>
-<h1><b>SNMP Trap Translator Convert v1.4beta2</b></h1>
+<h1><b>SNMP Trap Translator Convert v1.4</b></h1>
 <b>(</b><a href=
 "http://www.snmptt.org"><b>SNMPTTCONVERT</b></a><b>)</b><br />
 This file was last updated on:&nbsp; August 30th, 2004
 <h2><b>License</b></h2>
-<p>Copyright 2002-2007 Alex Burger<br />
+<p>Copyright 2002-2013 Alex Burger<br />
 alex_b@users.sourceforge.net<br />
 4/3/2002</p>
 <p>This program is free software; you can redistribute it and/or
