@@ -1,8 +1,8 @@
 #!/usr/bin/perl
 #
-# SNMPTT v1.4beta2
+# SNMPTT v1.4
 #
-# Copyright 2002-2009 Alex Burger
+# Copyright 2002-2013 Alex Burger
 # alex_b@users.sourceforge.net
 # 4/11/2002
 #
@@ -47,12 +47,12 @@
 #
 use strict;
 
-my $snmptt_version = "v1.4beta2";
+my $snmptt_version = "v1.4";
 
 sub showversion
 {
   print "\nSNMPTT $snmptt_version\n";
-  print "(c) 2002-2007 Alex Burger\n";
+  print "(c) 2002-2013 Alex Burger\n";
   print "http://snmptt.sourceforge.net\n\n";
 }
 
