@@ -1,5 +1,5 @@
 #
-# SNMPTT v1.4beta2 Configuration File
+# SNMPTT v1.4 Configuration File
 #
 # Windows NT
 #
