@@ -1,8 +1,8 @@
 #!/usr/bin/perl
 #
-# SNMPTTCONVERT v1.4beta2
+# SNMPTTCONVERT v1.4
 #
-# Copyright 2002-2012 Alex Burger
+# Copyright 2002-2013 Alex Burger
 # alex_b@users.sourceforge.net
 # 
 # 4/11/2002
