@@ -1,8 +1,8 @@
 #!/usr/bin/perl
 #
-# SNMPTTCONVERTMIB v1.4beta2
+# SNMPTTCONVERTMIB v1.4
 #
-# Copyright 2002-2007 Alex Burger
+# Copyright 2002-2013 Alex Burger
 # alex_b@users.sourceforge.net
 #
 # 8/14/2002
@@ -50,12 +50,12 @@ my $prepend_type = 1;
 #############################################################################
 #
 
-my $snmpttconvertmib_version = "v1.4beta2";
+my $snmpttconvertmib_version = "v1.4";
 
 sub showversion
 {
   print "\nSNMPTTCONVERTMIB $snmpttconvertmib_version\n";
-  print "(c) 2002-2012 Alex Burger\n";
+  print "(c) 2002-2013 Alex Burger\n";
   print "http://snmptt.sourceforge.net\n\n";
 }
 
